--- a/package.json
+++ b/package.json
@@ -10,14 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.7",
     "@types/react-big-calendar": "^1.8.10",
+    "@types/react-redux": "^7.1.33",
+    "@types/redux": "^3.6.0",
     "axios": "^1.7.5",
     "mdb-react-ui-kit": "^8.0.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-big-calendar": "^1.13.4",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.1"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.1",
+    "redux": "^5.0.1",
+    "redux-saga": "^1.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
