--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@types/react-redux": "^7.1.33",
     "@types/redux": "^3.6.0",
     "axios": "^1.7.5",
+    "bootstrap": "^5.3.3",
     "mdb-react-ui-kit": "^8.0.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-big-calendar": "^1.13.4",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
