--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "projeto-salao",
-  "private": true,
-  "version": "0.0.0",
+  "private": false,
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
