--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-big-calendar": "^1.13.4",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "redux": "^5.0.1",
